--- a/new.html
+++ b/new.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
-<HTML>
+<html>
 
-<HEAD><TITLE>Your Title Here</TITLE></HEAD>
-<BODY BGCOLOR="FFFFFF">
-<CENTER><IMG SRC="clouds.jpg" ALIGN="BOTTOM"> </CENTER>
-<HR>
-<a href="http://somegreatsite.com">Link Name</a>
+<head>
+  <title>My 1st Company</title>
+</head>
 
-is a link to another nifty site
+<body style="background-color:red;">
 
-<H1>This is a Header</H1>
+  <h1 style="color:Tomato;">Welcome to My Company</h1>
+  <h2>Web Site Main Ingredients:</h2>
 
-<H2>This is a Medium Header</H2>
+  <p>Pages (HTML)</p>
+  <a href="https://www.w3schools.com/html/html_links.asp">Visit W3Schools.com!</a>
+  <p>Style Sheets (CSS)</p>
+  <p>Computer Code (JavaScript)</p>
+  <p>Live Data (Files and Databases)</p>
 
-Send me mail at <a href="mailto:support@yourcompany.com">
+<form action="action_page.php" method="post">
+  <div class="imgcontainer">
+    <img src="img_avatar2.png" alt="Avatar" class="avatar">
+  </div>
 
-support@yourcompany.com</a>.
+  <div class="container">
+    <label for="uname"><b>Username</b></label>
+    <input type="text" placeholder="Enter Username" name="uname" required>
 
-<P> This is a new paragraph!
+    <label for="psw"><b>PassWord</b></label>
+    <input type="password" placeholder="Enter Password" name="psw" required>
 
-<P> <B>This is a new paragraph!</B>
+    <button type="submit">Login</button>
+    <label>
+      <input type="checkbox" checked="checked" name="remember"> Remember me
+    </label>
+  </div>
 
-<BR> <B><I>This is a new sentence without a paragraph break, in bold italics.</I></B>
+  <div class="container" style="background-color:#f1f1f1">
+    <button type="button" class="cancelbtn">Cancel</button>
+    <span class="psw">Forgot <a href="#">password?</a></span>
+  </div>
+</form>
 
-<HR>
-
-</BODY>
-
-</HTML>
+</body>
+</html>
